--- a/ToDo.html
+++ b/ToDo.html
@@ -17,7 +17,7 @@
 	<ul style="list-style:none;">
 
 	</ul>
-	<input type="button" value="削除" class="remove">
+	<input type="button" value="削除" class="delete">
 </div>
 </form>
 </body>
