--- a/ToDo.html
+++ b/ToDo.html
@@ -10,7 +10,7 @@
 <body>
 <form name="form">
 
-	<input type="text" size="40" id="task">
+	<input type="text" size="40" class="task">
 	<input type="button" value="作成" class="create">	
 
 <div id="todo" name="todo">
