--- a/bootstrap/calender.html
+++ b/bootstrap/calender.html
@@ -6,22 +6,13 @@
      href="http://tarruda.github.com/bootstrap-datetimepicker/assets/css/bootstrap-datetimepicker.min.css">
   </head>
   <body>
-  <div class="jumbotron">
   <div class="container">
-    <span class="glyphicon glyphicon-list-alt"></span>
-    <h2>Calendar</h2>
-    <div class="box">
-        <input type="text" placeholder="username">
-	    <input type="password" placeholder="password">
-	    <button class="btn btn-default full-width"><span class="glyphicon glyphicon-ok"></span></button>
-    </div>
-  </div>
-</div>
     <div id="datetimepicker" class="input-append date">
-      <input type="text"></input>
+      <!-- <input type="text"></input> -->
       <span class="add-on">
         <i data-time-icon="icon-time" data-date-icon="icon-calendar"></i>
       </span>
+    </div>
     </div>
     <script type="text/javascript"
      src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.8.3/jquery.min.js">
