--- a/index.html
+++ b/index.html
@@ -3,27 +3,47 @@
   <head>
     <title>Bootstrap 101 Template</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
      <link href="css/layout.css" rel="stylesheet" >
      <link href="css/bootstrap-responsive.css" rel="stylesheet">
+     <link rel="stylesheet" type="text/css" href="css/cupertino/jquery-ui-1.10.4.custom.min.css">
+	<script type="text/javascript" src="js/jquery-1.10.2.js"></script>
+	<script type="text/javascript" src="js/jquery-ui-1.10.4.custom.min.js"></script>
+    <script src="js/script.js" type="text/javascript"></script>
+    <script src="js/bootstrap.min.js"></script>
   </head>
   <body>
   	<div class="container">
     	<h1>To Do リスト</h1>
-    	<a class="btn btn-large" href=".modal" role="button" data-toggle="modal"><i class="icon-pencil"></i> Add</a>
+    	<a class="btn btn-large" data-target="#addTask" role="button" data-toggle="modal" style="background: yellow; float: left;"><i class="icon-pencil"></i><span class="hidden-phone"> Add</span></a>
+    	 <p class="visible-phone" style="float: right; padding-right: 3%;">date:<input type="text" id="date"></p>
     </div>
-    <div class="modal hide fade">
+    <div id="addTask"class="modal hide fade" style="margin-top: 8%">
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
     <h3>add task</h3>
   </div>
   <div class="modal-body">
-    <input type="text">
+    <input type="text" id="value">
   </div>
   <div class="modal-footer">
-    <a href="#" class="btn">Close</a>
-    <a href="#" class="btn btn-primary">Save task</a>
+    <a href="#" class="btn" data-dismiss="modal">Close</a>
+    <a href="#" class="btn btn-primary" id="create">Save task</a>
+  </div>
+</div>
+    <div id="editTask"class="modal hide fade" style="margin-top: 8%">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+    <h3>edit task</h3>
+  </div>
+  <div class="modal-body">
+    <input type="text" id="value">
+  </div>
+  <div class="modal-footer">
+    <a href="#" class="btn" data-dismiss="modal">Close</a>
+    <a href="#" class="btn btn-primary" id="change" data-dismiss="modal">edit task</a>
   </div>
 </div>
     <div class="container">
@@ -36,23 +56,18 @@
     			</ul>
     		</div>
   			<div class="span7">
-  				<p class="hidden-phone">calender</p>
+  				<div id="datepicker" class="hidden-phone" style="font-size: 150%; padding-left: 12%;"></div>
   			</div>
 		</div>
 	</div>
 	<div class="container">
 		<div class="btn-group">
-			<a class="btn btn-large" href="#"><i class="icon-edit"></i><span class="hidden-phone"> Edit</span></a>
-			<a class="btn btn-large" href="#"><i class="icon-trash"></i><span class="hidden-phone"> Trash</span></a>
-			<a class="btn btn-large" href="#"><i class="icon-ok"></i><span class="hidden-phone"> Achieve</span></a>
+			<a id="edit" class="btn btn-large" href="#"><i class="icon-edit"></i><span class="hidden-phone"> Edit</span></a>
+			<a id="trash" class="btn btn-large" href="#"><i class="icon-trash"></i><span class="hidden-phone"> Trash</span></a>
+			<a id="achieve" class="btn btn-large" href="#"><i class="icon-ok"></i><span class="hidden-phone"> Achieve</span></a>
 		</div>
     </div>
-    <script src="http://code.jquery.com/jquery.js"></script>
-    <script type="text/javascript">
-$('#myModal').on('show', function (e) {
-    if (!data) return e.preventDefault() // stops modal from being shown
-});
-</script>
-   <script src="js/bootstrap.min.js"></script>
+
+
   </body>
 </html>
