--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta charset="utf-8">
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
-     <link href="css/layout.css" rel="stylesheet" >
-     <link href="css/bootstrap-responsive.css" rel="stylesheet">
-     <link rel="stylesheet" type="text/css" href="css/cupertino/jquery-ui-1.10.4.custom.min.css">
+    <link href="css/layout.css" rel="stylesheet" >
+    <link href="css/bootstrap-responsive.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/cupertino/jquery-ui-1.10.4.custom.min.css">
 	<script type="text/javascript" src="js/jquery-1.10.2.js"></script>
 	<script type="text/javascript" src="js/jquery-ui-1.10.4.custom.min.js"></script>
     <script src="js/script.js" type="text/javascript"></script>
@@ -26,7 +26,7 @@
     <h3>add task</h3>
   </div>
   <div class="modal-body">
-    <input type="text" id="value">
+    <input type="text" id="Avalue">
   </div>
   <div class="modal-footer">
     <a href="#" class="btn" data-dismiss="modal">Close</a>
@@ -39,7 +39,7 @@
     <h3>edit task</h3>
   </div>
   <div class="modal-body">
-    <input type="text" id="value">
+    <input type="text" id="Evalue">
   </div>
   <div class="modal-footer">
     <a href="#" class="btn" data-dismiss="modal">Close</a>
