--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     			<h3>add task</h3>
   			</div>
   			<div class="modal-body">
-   				<input type="text" id="Avalue">
+   				<input type="text" id="Avalue" placeholder="タスクを入力してください">
   			</div>
   			<div class="modal-footer">
     			<a href="#" class="btn" data-dismiss="modal">Close</a>
