--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 			<a id="edit" class="btn btn-large" href="#"><i class="icon-edit"></i><span class="hidden-phone"> Edit</span></a>
 			<a id="trash" class="btn btn-large" href="#"><i class="icon-trash"></i><span class="hidden-phone"> Trash</span></a>
 			<a id="achieve" class="btn btn-large" href="#"><i class="icon-ok"></i><span class="hidden-phone"> Achieve</span></a>
+		<!--	<a id="refresh" class="btn btn-circle" href="#"><i class="icon-refresh"></i><span class="hidden-phone"> Refresh</span></a> -->
 		</div>
 			
 		<p class="visible-phone" style="padding-right: 3%;padding-top: 3%">date:<input type="text" id="date"></p>
