--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
    			<div class="row-fluid">
  				 <div id="box"class="span5">
   					<ul>
-  					<li>aaaaaa</li>
-    				<li>bbbbbb</li>
-    				<li>cccccc</li>
+  					<li>aaaaaa<span class="term">10/23</span></li>
+    				<li>bbbbbb<span class="term">10/22</span></li>
+    				<li>cccccc<span class="term">10/25</span></li>
     				</ul>
     			</div>
   				<div class="span7">
