--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
     			<h3>add task</h3>
   			</div>
   			<div id="modal1" class="modal-body">
-   				<input type="text" id="Avalue" placeholder="タスクを入力してください">
+   				<span>Task:</span> <input type="text" id="Avalue" placeholder="タスクを入力してください"><br />
+          <span>Date:</span> <input type="text" class="taskCal"> 　　　まで
+
   			</div>
   			<div class="modal-footer">
     			<a href="#" class="btn" data-dismiss="modal">Close</a>
@@ -46,7 +48,8 @@
    				<h3>edit task</h3>
   			</div>
   			<div id="modal2"class="modal-body">
-    			<input type="text" id="Evalue">
+    			<span>Task:</span> <input type="text" id="Evalue"><br />
+          <span>Date:</span> <input type="text" class="taskCal"> 　　　まで
   			</div>
   			<div class="modal-footer">
     			<a href="#" class="btn" data-dismiss="modal">Close</a>
@@ -58,9 +61,9 @@
    			<div class="row-fluid">
  				 <div id="box"class="span5">
   					<ul>
-  					<li>aaaaaa<span class="term">10/23</span></li>
-    				<li>bbbbbb<span class="term">10/22</span></li>
-    				<li>cccccc<span class="term">10/25</span></li>
+  					<li><span class="task">aaaaaa</span><span class="term">10/23</span></li>
+    				<li><span class="task">bbbbbb</span><span class="term">10/22</span></li>
+    				<li><span class="task">cccccc</span><span class="term">10/25</span></li>
     				</ul>
     			</div>
   				<div class="span7">
