--- a/business-casual/about.html
+++ b/business-casual/about.html
@@ -74,6 +74,13 @@
                     <h2 class="intro-text text-center"><strong>Web班Todo管理アプリの紹介</strong>
                     </h2>
                     <hr>
+                    <div class="intro-text text-center">
+                        <a href = "#login"><strong><u>ログイン</u></strong></a>&emsp;
+                        <a href = "#add"><strong><u>タスクの追加</u></strong></a>&emsp;
+                        <a href = "#edit"><strong><u>タスクの編集</u></strong></a>&emsp;
+                        <a href = "#delete"><strong><u>タスクの削除</u></strong></a>
+                    </div>
+                    <hr class="tagline-divider">
                 </div>
                 <div class="col-md-6">
                     <img class="img-responsive img-border-left" src="img/Todologin.jpg" alt="">
