--- a/business-casual/about.html
+++ b/business-casual/about.html
@@ -86,45 +86,37 @@
                     <img class="img-responsive img-border-left" src="img/Todologin.jpg" alt="">
                 </div>
                 	<div class="col-md-6">
-                    	<p></p>
-                    	<p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets.</p>
-                    	<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                    	<p>まず最初にログインページの下の方にある新規ユーザ登録の部分に登録するユーザ名を入力します</p>
+                    	<p>そうするとユーザ登録が完了し、Todo管理アプリのページに飛びます</p>
+                    	<p>一度ユーザ名を登録してログインした場合次からログインする場合は上のユーザ名と書いてある部分に登録したユーザ名を入力すればまたログイン出来ます</p>
                 	</div>
                 		<div class="col-md-6">
                     <img class="img-responsive img-border-left" src="img/Todoindex.jpg" alt="">
                 		</div>
                 		<div class="col-md-6">
-                    	<p></p>
-                    	<p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets.</p>
-                    	<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                    	<p>左上のボタンでタスクの追加(Add)・編集(Edit)・削除(Trash)が出来ます。そして追加・編集したタスクは左下の赤い部分に表示されます</p>
+                    	<p>右上にログアウトボタンがあり、その下にカレンダーが表示されます</p>
                 		</div>
                 			<div class="col-md-6">
                     <img class="img-responsive img-border-left" src="img/Todoaddtask.jpg" alt="">
                 			</div>
                 			<div class="col-md-6">
-                    		<p></p>
-                    		<p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets.</p>
-                    		<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                    		<p>左上のAddボタンをクリックするとタスクを入力する部分とそのタスクの期日を入力する部分が表示されます</p>
+                    		<p>タスクの期日はDateの横の入力部分をクリックするとカレンダーが表示されるのでカレンダーの設定したい日付をクリックすると期日の設定が出来ます</p>
+                    		<p>タスクと期日の入力が終わったら右下のSave taskをクリックすればタスクが追加されます</p>
                 			</div>
                 				<img class="img-responsive img-border-left" src="img/Todoedittask.jpg" alt="">
                 				</div>
                 				<div class="col-md-6">
-                    			<p></p>
-                    			<p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets.</p>
-                    			<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                    			<p>タスク一覧内の編集したいタスクをクリックし、左上のEditボタンをクリックすると編集したいタスクとそのタスクの期日が編集する部分が表示されます</p>
+                    			<p>この画面で追加の時のようにタスクを編集し、期日を設定した後に右下のedit taskをクリックするとタスクの編集が出来ます</p>
                 				</div>
-                					<div class="col-md-6">
-                    				<p></p>
-                    				<p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets.</p>
-                    				<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
-                					</div>
-                					<img class="img-responsive img-border-left" src="img/Todoedittask.jpg" alt="">
+                					<img class="img-responsive img-border-left" src="img/Todotrashtask.jpg" alt="">
                 					</div>
                 					<div class="col-md-6">
-                    				<p></p>
-                    				<p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets.</p>
-                    				<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                    				<p>削除したいタスクをクリックして左上のTrashボタンをクリックすると、タスクを削除することが出来ます</p>
                 					</div>
+
                 <div class="clearfix"></div>
             </div>
         </div>
