business-casual_update

--- a/business-casual/index.html
+++ b/business-casual/index.html
@@ -47,7 +47,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-                <a class="navbar-brand" href="index.html">Business Casual</a>
+                <a class="navbar-brand" href="index.html">XMLPro</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -113,9 +113,11 @@
                     </h2>
                     <hr>
                 </div>
-    <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="img/IMG_1817.jpg" alt="">
+    <div class="boxCenter">
+    <div class="col-sm-4 text-center img-height">
+                    <img class="img-responsive img-size" src="img/IMG_1817.jpg" alt="" width="150%" height="150%">
                                     </div>
+                                    <div class="txt-box">
                     <h3><p>左から鈴木・小原・村山</p>
                     	<h3><p>メンバーのTwitterID</p>
                     		<h3><p>鈴木: @mac_lily_poke</p>
@@ -126,6 +128,8 @@
                     		</h3>
                     	</h3>
                     </h3>
+                    </div>
+                </div>
     <!-- /.container -->
 
  <!--   <footer>
