--- a/business-casual/about.html
+++ b/business-casual/about.html
@@ -86,6 +86,7 @@
                     <img class="img-responsive img-border-left" src="img/Todologin.jpg" alt="">
                 </div>
                 	<div class="col-md-6">
+                    <a name="login"></a>
                     	<p>まず最初にログインページの下の方にある新規ユーザ登録の部分に登録するユーザ名を入力します</p>
                     	<p>そうするとユーザ登録が完了し、Todo管理アプリのページに飛びます</p>
                     	<p>一度ユーザ名を登録してログインした場合次からログインする場合は上のユーザ名と書いてある部分に登録したユーザ名を入力すればまたログイン出来ます</p>
@@ -94,6 +95,7 @@
                     <img class="img-responsive img-border-left" src="img/Todoindex.jpg" alt="">
                 		</div>
                 		<div class="col-md-6">
+                        <a name="add"></a>
                     	<p>左上のボタンでタスクの追加(Add)・編集(Edit)・削除(Trash)が出来ます。そして追加・編集したタスクは左下の赤い部分に表示されます</p>
                     	<p>右上にログアウトボタンがあり、その下にカレンダーが表示されます</p>
                 		</div>
@@ -108,12 +110,14 @@
                 				<img class="img-responsive img-border-left" src="img/Todoedittask.jpg" alt="">
                 				</div>
                 				<div class="col-md-6">
+                                <a name="edit"></a>
                     			<p>タスク一覧内の編集したいタスクをクリックし、左上のEditボタンをクリックすると編集したいタスクとそのタスクの期日が編集する部分が表示されます</p>
                     			<p>この画面で追加の時のようにタスクを編集し、期日を設定した後に右下のedit taskをクリックするとタスクの編集が出来ます</p>
                 				</div>
                 					<img class="img-responsive img-border-left" src="img/Todotrashtask.jpg" alt="">
                 					</div>
                 					<div class="col-md-6">
+                                    <a name="delete"></a>
                     				<p>削除したいタスクをクリックして左上のTrashボタンをクリックすると、タスクを削除することが出来ます</p>
                 					</div>
 
