--- a/business-casual/about.html
+++ b/business-casual/about.html
@@ -124,7 +124,7 @@
                     <img class="img-responsive img-border-left" src="img/Todoedittask.jpg" alt="">
                 </div>
             </div>
-            <div class="box-task col-md-12">
+            <div class="box-end col-md-12">
                 <div class="col-md-6">
                     <img class="img-responsive img-border-left" src="img/Todotrashtask.jpg" alt="">
                 </div>
@@ -133,6 +133,8 @@
                     <p>削除したいタスクをクリックして左上のTrashボタンをクリックすると、タスクを削除することが出来ます</p>
                 </div>
             </div>
+                            <div class="top"><a href="#top"><u>ページトップへ</u></a></div>
+
         </div>
 
 
