--- a/business-casual/about.html
+++ b/business-casual/about.html
@@ -82,12 +82,12 @@
                         </div>
                         <hr class="tagline-divider">
                     </div>
+                    <div class="anc col-md-12"><a name="login"></a></div>
                     <div class="box-login col-md-12">
                         <div class="col-md-6">
                             <img class="img-responsive img-border-left" src="img/Todologin.jpg" alt="">
                         </div>
                         <div class="col-md-6">
-                            <a name="login"></a>
                             <p>まず最初にログインページの下の方にある新規ユーザ登録の部分に登録するユーザ名を入力します</p>
                             <p>そうするとユーザ登録が完了し、Todo管理アプリのページに飛びます</p>
                             <p>一度ユーザ名を登録してログインした場合次からログインする場合は上のユーザ名と書いてある部分に登録したユーザ名を入力すればまたログイン出来ます</p>
